src/App.css
html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}

*, *:before, *:after {box-sizing: inherit}

.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}

/* setup */

html {
  font-size: 125%;
}

body {
  font-size: 0.8rem;
  font-family: 'Noto Sans JP', sans-serif;
  line-height: 1.5;
}

h1, p, h2, h4, ul, li, main {
  margin: 0; 
  padding: 0;
}

ul, li {
  list-style-type: none;
}

img {
  width: 100%;
  height: auto;
  display: block;
  max-height: 500px;
  object-fit: cover;
  margin: 0 auto;
}

.wrapper {
  max-width: 1200px;
  width: 70%;
  margin: 0 auto;
  transition: 0.3s;
  position: relative;
}

/* App.js */

.App {
  background-color: #f4f4f4;
}

main {
  padding-top: 50px;
}

/* Loading.js*/

.loader {
  height: 100vh; 
  background-color: #f4f4f4;
  display: flex;
  justify-content: center;
  align-items: center;
  /* background-image: url(./assets/stars.jpg);
  background-repeat: no-repeat;
  background-size: cover; */
}

.circle {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: black;
  margin: 10px;
  animation: scale 2.5s ease-in-out infinite;
}

@keyframes scale {
  0%, 100% {
    transform: scale(0.2);
  }
  50% {
    transform: scale(1);
  }
}

.circle:nth-child(0) {
  animation-delay: 0s;
}

.circle:nth-child(1) {
  animation-delay: 0.2s;
}

.circle:nth-child(2) {
  animation-delay: 0.4s;
}

.circle:nth-child(3) {
  animation-delay: 0.6s;
}

/* .loaderImage {
  width: 20%;
  height: auto;
} */

/* .loaderLogo {
  font-size: 2rem;
} */

/* Nav.js */

nav {
  background: white;
  height: 50px;
  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  align-items: center;
  border-bottom: 1px solid rgba(0, 0, 0, 0.21);
  z-index: 10;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.navContent {
  display: flex;
  justify-content: space-between;
}
.navWrapper {
  width: 60%;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
}

.logo {
  font-family: 'Nanum Gothic Coding', monospace;
  font-size: 1.15rem;
}

.navButtons {
  align-self: center;
}

.fa-home, .fa-heart {
  font-size: 1rem;
  margin-left: 5px;
  transition: 0.3s;
}

.fa-home:hover, .fa-heart:hover {
  color: rgb(103, 103, 103);
}

.savedLikes {
  position: absolute;
  height: 400px;
  width: 393px;
  top: 42px;
  right: 0;
  background: white;
  border-radius: 10px;
  border: 1px solid rgba(0, 0, 0, 0.21);
  padding: 9px 15px;
  overflow: scroll;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  transition: 0.3s;
}

.active {
  opacity: 1;
}

.inactive {
  opacity: 0;
  height: 0px;
}

.savedLikesHeading {
  font-family: 'Noto Sans JP', sans-serif;
  font-size: 0.7rem;
  position: relative;
}

.savedLikesHeading::after {
  content: "";
  position: absolute;
  height: 0.5px;
  width: 390px;
  background-color: gray;
  bottom: -11px;
  left: -15px;
}

.savedLikesPosts {
  display: flex;
  flex-wrap: wrap;
  /* justify-content: space-between; */
}

/* SubNav.js */

.savedPosts {
  display: flex;
}

.savedPostImage {
  width: 100px;
  height: 100px;
  border-radius: 10%;
  margin: 40px 10px 10px 10px;
  /* margin-right: 10px; */
}
/* Feed.js */
.post {
  background: white;
  border-radius: 20px;
  padding-top: 35px;
  margin-top: 35px;
  border: 1px solid rgba(0, 0, 0, 0.21);
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  width: 100%;
}

.details {
  padding: 10px 20px 0;
}

button {
  background: transparent;
  border: none;
  cursor: pointer;
}

.heart {
  height: 64px;
}

.go4268192979 {
  position: relative;
  left: -32px;
  bottom: 23px;
  height: 64px;
}

.go2484888251 {
  position: relative;
  left: -32px;
  bottom: 23px;
  height: 64px;
}

.postInfo {
  position: relative;
  bottom: 46px;
}

h2 {
  font-size: 0.9rem;
}

@media (max-width: 800px) {
  .wrapper {
    width: 95%;
  }
}

@media (max-width: 420px) {
  .savedLikes {
    width: 273px;
    height: 210px;
  }
  .savedLikesHeading::after {
    width: 270px;
  }
}

